--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,14 @@ body {
     position: relative;
 }
 
-.ball {
-    background-color: green;
+.ball img {
+
     height: 20px;
     width: 20px;
     position: absolute;
     top: 0;
     left: 0;
+    border-radius: 50%;
 }
 
 .paddle {
@@ -29,6 +30,7 @@ body {
     top: 100px;
     position: absolute;
     background-color: black;
+    border-radius: 20px;
 }
 
 .player-paddle {
@@ -38,4 +40,3 @@ body {
 .computer-paddle {
     right: 0;
 }
-
